# vkwars

./: .gitignore  BadVkResult.cpp  BadVkResult.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  RendererBase.cpp  RendererBase.hpp  RendererUtil.hpp  UIRenderer.cpp  UIRenderer.hpp  Uploader.cpp  Uploader.hpp  UploaderBase.cpp  UploaderBase.hpp  Window.cpp  Window.hpp  main.cpp  vk_mem_alloc.cpp
.github/workflows/: cmake.yml
imgui/: CMakeLists.txt
shaders/: CMakeLists.txt  main.frag  main.vert
vma/: Allocation.cpp  Allocation.hpp  Allocator.cpp  Allocator.hpp  vk_mem_alloc.cpp
